--- a/06Summarization/notebooks/03.ipynb
+++ b/06Summarization/notebooks/03.ipynb
@@ -43,7 +43,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading data files: 100%|█████████████████████████████████████████| 1/1 [00:00<00:00, 4505.16it/s]\n",
+      "Extracting data files: 100%|███████████████████████████████████████████| 1/1 [00:00<00:00, 290.12it/s]\n",
+      "Generating train split: 2225 examples [00:00, 20077.08 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "raw_dataset = load_dataset(\"csv\",data_files=\"../processed_summary.csv\")"
    ]
@@ -153,6 +163,164 @@
    "source": [
     "model = AutoModelForSeq2SeqLM.from_pretrained(ckpt)\n",
     "data_collator = DataCollatorForSeq2Seq(tokenizer, model=ckpt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3d263726-f14b-4f3b-9028-423638f92db7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T5ForConditionalGeneration(\n",
+       "  (shared): Embedding(32128, 512)\n",
+       "  (encoder): T5Stack(\n",
+       "    (embed_tokens): Embedding(32128, 512)\n",
+       "    (block): ModuleList(\n",
+       "      (0): T5Block(\n",
+       "        (layer): ModuleList(\n",
+       "          (0): T5LayerSelfAttention(\n",
+       "            (SelfAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (relative_attention_bias): Embedding(32, 8)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (1): T5LayerFF(\n",
+       "            (DenseReluDense): T5DenseActDense(\n",
+       "              (wi): Linear(in_features=512, out_features=2048, bias=False)\n",
+       "              (wo): Linear(in_features=2048, out_features=512, bias=False)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "              (act): ReLU()\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (1-5): 5 x T5Block(\n",
+       "        (layer): ModuleList(\n",
+       "          (0): T5LayerSelfAttention(\n",
+       "            (SelfAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (1): T5LayerFF(\n",
+       "            (DenseReluDense): T5DenseActDense(\n",
+       "              (wi): Linear(in_features=512, out_features=2048, bias=False)\n",
+       "              (wo): Linear(in_features=2048, out_features=512, bias=False)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "              (act): ReLU()\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (final_layer_norm): T5LayerNorm()\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       "  (decoder): T5Stack(\n",
+       "    (embed_tokens): Embedding(32128, 512)\n",
+       "    (block): ModuleList(\n",
+       "      (0): T5Block(\n",
+       "        (layer): ModuleList(\n",
+       "          (0): T5LayerSelfAttention(\n",
+       "            (SelfAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (relative_attention_bias): Embedding(32, 8)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (1): T5LayerCrossAttention(\n",
+       "            (EncDecAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (2): T5LayerFF(\n",
+       "            (DenseReluDense): T5DenseActDense(\n",
+       "              (wi): Linear(in_features=512, out_features=2048, bias=False)\n",
+       "              (wo): Linear(in_features=2048, out_features=512, bias=False)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "              (act): ReLU()\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (1-5): 5 x T5Block(\n",
+       "        (layer): ModuleList(\n",
+       "          (0): T5LayerSelfAttention(\n",
+       "            (SelfAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (1): T5LayerCrossAttention(\n",
+       "            (EncDecAttention): T5Attention(\n",
+       "              (q): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=512, bias=False)\n",
+       "              (o): Linear(in_features=512, out_features=512, bias=False)\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "          (2): T5LayerFF(\n",
+       "            (DenseReluDense): T5DenseActDense(\n",
+       "              (wi): Linear(in_features=512, out_features=2048, bias=False)\n",
+       "              (wo): Linear(in_features=2048, out_features=512, bias=False)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "              (act): ReLU()\n",
+       "            )\n",
+       "            (layer_norm): T5LayerNorm()\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (final_layer_norm): T5LayerNorm()\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=512, out_features=32128, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
